[gd_scene load_steps=16 format=2]

[ext_resource path="res://plugins/minigames/dungeon_parkour/minigame.gd" type="Script" id=1]
[ext_resource path="res://plugins/minigames/dungeon_parkour/player.gd" type="Script" id=2]
[ext_resource path="res://plugins/minigames/dungeon_parkour/Dungeon Arena/Floor01.tscn" type="PackedScene" id=3]
[ext_resource path="res://plugins/minigames/dungeon_parkour/Dungeon Arena/Floor02.tscn" type="PackedScene" id=4]
[ext_resource path="res://plugins/minigames/dungeon_parkour/Dungeon Arena/BlockS01.tscn" type="PackedScene" id=5]
[ext_resource path="res://plugins/minigames/dungeon_parkour/Dungeon Arena/Skull01.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/waypoint/waypoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://plugins/minigames/dungeon_parkour/Dungeon Arena/platform.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/textures/finish.png" type="Texture" id=9]
[ext_resource path="res://plugins/minigames/dungeon_parkour/Dungeon Arena/Pole02.tscn" type="PackedScene" id=10]
[ext_resource path="res://plugins/minigames/dungeon_parkour/Wind Run.ogg" type="AudioStream" id=11]


[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.0392157, 0.0470588, 0.0588235, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 2, 4, 3 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 4.75, 1 )

[sub_resource type="SpatialMaterial" id=4]
params_cull_mode = 2
albedo_texture = ExtResource( 9 )
uv1_scale = Vector3( 9, 2, 1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Player1" type="KinematicBody" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 0, 0 )
script = ExtResource( 2 )

[node name="Shape" type="CollisionShape" parent="Player1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )

[node name="Model" type="Spatial" parent="Player1"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="CameraTracker" type="Spatial" parent="Player1"]

[node name="Camera" type="Camera" parent="Player1/CameraTracker"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 4, 4 )
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.558556, 0.796833, -0.230373, -0.593984, 0.578106, 0.559443, 0.578963, -0.175643, 0.796211, 0, 3.357, 12.084 )

[node name="Ground" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 0, 0 )

[node name="Floor01" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0 )

[node name="Floor47" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )

[node name="Floor08" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )

[node name="Floor14" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 0 )

[node name="Floor21" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, 0 )

[node name="Floor31" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -4 )

[node name="Floor37" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -8 )

[node name="Floor43" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -12 )

[node name="Floor111" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -16 )

[node name="Floor143" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -20 )

[node name="Floor58" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 34, 0, -12 )

[node name="Floor65" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38, 0, -12 )

[node name="Floor72" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 42, 0, -12 )

[node name="Floor79" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 46, 0, -12 )

[node name="Floor87" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 70, 0, -12 )

[node name="Floor94" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 74, 0, -12 )

[node name="Floor100" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 78, 0, -12 )

[node name="Floor105" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 82, 0, -12 )

[node name="Floor120" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 92, 0, -12 )

[node name="Floor128" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 96, 0, -12 )

[node name="Floor132" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 0, -12 )

[node name="Floor140" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 104, 0, -12 )

[node name="Floor02" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -2 )

[node name="Floor50" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -2 )

[node name="Floor11" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -2 )

[node name="Floor15" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, -2 )

[node name="Floor20" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -2 )

[node name="Floor29" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -6 )

[node name="Floor35" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -10 )

[node name="Floor59" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 34, 0, -10 )

[node name="Floor66" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38, 0, -10 )

[node name="Floor70" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 42, 0, -10 )

[node name="Floor80" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 46, 0, -10 )

[node name="Floor88" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 72, 0, -12 )

[node name="Floor95" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 76, 0, -12 )

[node name="Floor101" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 80, 0, -12 )

[node name="Floor106" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 84, 0, -12 )

[node name="Floor116" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 92, 0, -14 )

[node name="Floor125" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 96, 0, -14 )

[node name="Floor130" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 0, -14 )

[node name="Floor138" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 104, 0, -14 )

[node name="Floor121" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 92, 0, -10 )

[node name="Floor129" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 96, 0, -10 )

[node name="Floor133" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 0, -10 )

[node name="Floor141" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 104, 0, -10 )

[node name="Floor45" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -14 )

[node name="Floor113" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -18 )

[node name="Floor142" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -22 )

[node name="Floor63" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 34, 0, -14 )

[node name="Floor69" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38, 0, -14 )

[node name="Floor73" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 42, 0, -14 )

[node name="Floor78" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 46, 0, -14 )

[node name="Floor86" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 68, 0, -12 )

[node name="Floor03" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 2 )

[node name="Floor51" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2 )

[node name="Floor12" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 2 )

[node name="Floor16" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 2 )

[node name="Floor22" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, 2 )

[node name="Floor04" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -2 )

[node name="Floor49" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -2 )

[node name="Floor10" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -2 )

[node name="Floor24" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, -2 )

[node name="Floor30" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, -6 )

[node name="Floor36" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, -10 )

[node name="Floor57" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, -10 )

[node name="Floor42" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, -14 )

[node name="Floor112" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, -18 )

[node name="Floor145" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, -22 )

[node name="Floor62" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, -14 )

[node name="Floor17" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, -2 )

[node name="Floor52" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="Floor23" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -2 )

[node name="Floor32" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -6 )

[node name="Floor38" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -10 )

[node name="Floor61" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 0, -10 )

[node name="Floor68" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 0, -10 )

[node name="Floor71" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 44, 0, -10 )

[node name="Floor89" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 72, 0, -10 )

[node name="Floor96" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 76, 0, -10 )

[node name="Floor102" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 80, 0, -10 )

[node name="Floor107" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 84, 0, -10 )

[node name="Floor117" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 90, 0, -14 )

[node name="Floor122" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 90, 0, -10 )

[node name="Floor81" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 48, 0, -10 )

[node name="Floor84" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 72, 0, -14 )

[node name="Floor92" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 76, 0, -14 )

[node name="Floor99" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 80, 0, -14 )

[node name="Floor104" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 84, 0, -14 )

[node name="Floor115" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 94, 0, -14 )

[node name="Floor124" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 98, 0, -14 )

[node name="Floor134" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 102, 0, -14 )

[node name="Floor136" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 106, 0, -14 )

[node name="Floor119" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 94, 0, -10 )

[node name="Floor127" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 98, 0, -10 )

[node name="Floor131" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 102, 0, -10 )

[node name="Floor139" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 106, 0, -10 )

[node name="Floor44" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -14 )

[node name="Floor114" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -18 )

[node name="Floor144" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -22 )

[node name="Floor56" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 0, -14 )

[node name="Floor64" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 0, -14 )

[node name="Floor75" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 44, 0, -14 )

[node name="Floor82" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 68, 0, -10 )

[node name="Floor76" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 48, 0, -14 )

[node name="Floor90" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 68, 0, -14 )

[node name="Floor05" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0 )

[node name="Floor48" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )

[node name="Floor09" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 0 )

[node name="Floor25" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, 0 )

[node name="Floor33" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, -4 )

[node name="Floor39" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, -8 )

[node name="Floor41" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, -12 )

[node name="Floor110" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, -16 )

[node name="Floor146" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, -20 )

[node name="Floor55" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, -12 )

[node name="Floor18" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 0 )

[node name="Floor53" parent="Ground" instance=ExtResource( 4 )]

[node name="Floor26" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, 0 )

[node name="Floor28" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -4 )

[node name="Floor34" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -8 )

[node name="Floor40" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -12 )

[node name="Floor109" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -16 )

[node name="Floor147" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, -20 )

[node name="Floor60" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 36, 0, -12 )

[node name="Floor67" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 0, -12 )

[node name="Floor74" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 44, 0, -12 )

[node name="Floor83" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 70, 0, -10 )

[node name="Floor91" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 74, 0, -10 )

[node name="Floor98" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 78, 0, -10 )

[node name="Floor108" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 82, 0, -10 )

[node name="Floor123" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 90, 0, -12 )

[node name="Floor77" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 48, 0, -12 )

[node name="Floor85" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 70, 0, -14 )

[node name="Floor93" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 74, 0, -14 )

[node name="Floor97" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 78, 0, -14 )

[node name="Floor103" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 82, 0, -14 )

[node name="Floor118" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 94, 0, -12 )

[node name="Floor126" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 98, 0, -12 )

[node name="Floor135" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 102, 0, -12 )

[node name="Floor137" parent="Ground" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 106, 0, -12 )

[node name="Floor06" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 2 )

[node name="Floor46" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 2 )

[node name="Floor07" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 2 )

[node name="Floor19" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, 2 )

[node name="Floor13" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 2 )

[node name="Floor54" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="Floor27" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 0, 2 )

[node name="BlockS01" parent="Ground" instance=ExtResource( 5 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 24, 0, -22.5 )

[node name="BlockS02" parent="Ground" instance=ExtResource( 5 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 22, 0, -22.5 )

[node name="BlockS03" parent="Ground" instance=ExtResource( 5 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 26, 0, -22.5 )

[node name="Skull01" parent="Ground" instance=ExtResource( 6 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 24, 0.5, -22.5 )

[node name="Skull02" parent="Ground" instance=ExtResource( 6 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 22, 0.5, -22.5 )

[node name="Skull03" parent="Ground" instance=ExtResource( 6 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 26, 0.5, -22.5 )

[node name="Waypoint" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, 0 )
nodes = [ NodePath("../Waypoint7") ]

[node name="Waypoint7" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21, 0, 0 )
nodes = [ NodePath("../Waypoint8") ]

[node name="Waypoint8" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 0, 0 )
nodes = [ NodePath("../Waypoint10") ]

[node name="Waypoint10" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 0, -9 )
nodes = [ NodePath("../Waypoint9") ]

[node name="Waypoint9" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -11 )
nodes = [ NodePath("../Waypoint2") ]

[node name="Waypoint2" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 0, -12 )
nodes = [ NodePath("../Waypoint3") ]

[node name="Waypoint3" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 48, 0, -12 )
nodes = [ NodePath("../Waypoint4") ]

[node name="Waypoint4" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 64, 0, -12 )
nodes = [ NodePath("../Waypoint5") ]

[node name="Waypoint5" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 85, 0, -12 )
nodes = [ NodePath("../Waypoint6") ]

[node name="Waypoint6" parent="Ground" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 110, 0, -12 )

[node name="Platform" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -12 )
moving = false
speed = 3
path = [ Vector3( 14, 0, -12 ), Vector3( 2, 0, -12 ) ]

[node name="Fireball1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -28, 1, -21 )

[node name="Fireball2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26, 1, -21 )

[node name="Fireball3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 1, -21 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Finish" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 55, 0, -12 )

[node name="CollisionShape" type="CollisionShape" parent="Finish"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.2, 0 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Finish"]
transform = Transform( -4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, -3, 3.5, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Pole02" parent="Finish" instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -3, 0, -2.75 )

[node name="Pole03" parent="Finish" instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3, 0, 2.75 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true
bus = "Music"
[connection signal="timeout" from="Timer" to="." method="create_fireballs"]
[connection signal="body_entered" from="Finish" to="." method="_on_Finish_body_entered"]
